--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "main": "Develop/server.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node Develop/server.js"
   },
   "author": "",
   "license": "ISC",
